--- a/index.html
+++ b/index.html
@@ -1,28 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobile Backing</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="./static/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./static/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./static/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./static/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./static/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./static/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./static/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./static/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./static/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="./static/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./static/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./static/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-</head>
-<body>
-    
-</body>
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./static/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./static/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./static/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./static/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./static/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./static/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./static/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./static/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./static/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./static/favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./static/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./static/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./static/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./static/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sora:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./static/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header-inner">
+          <a href="#!" class="link__home">
+            <figure>
+              <img src="./static/img/Logo.svg" alt="" class="Logo" />
+            </figure>
+          </a>
+          <nav class="navigation">
+            <a href="#!" class="navigation-item">Home</a
+            ><a href="#!" class="navigation-item">Products</a
+            ><a href="#!" class="navigation-item">Features</a
+            ><a href="#!" class="navigation-item">Blog</a>
+          </nav>
+          <div class="header-wrap">
+            <a href="#!" class="btn btn-decoration">Log in</a>
+            <a href="#!" class="btn">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="main" style="height: 5000px">
+      <section class="hero">
+        <div class="container">
+          <div class="hero-inner">
+            <div class="hero__content">
+              <h1 class="title hero__title">
+                Digital <span class="title-transition">Payment</span> For
+                Everyone.
+              </h1>
+              <p class="desc hero__desc">
+                We bring together eveything that’s required to build websites
+                and apps that accept payments and send payouts globally. We are
+                the best platform.
+              </p>
+              <form action="" class="form-submit">
+                <input
+                  type="email"
+                  name="email"
+                  id="email-focus"
+                  class="form-email"
+                  placeholder="Your email adress"
+                />
+                <button type="submit" class="form-btn btn">
+                  Get Started
+                </button>
+              </form>
+              <p class="desc desc-child">*We’ll respect the inbox and never share your email.</p>
+            </div>
+            <div class="hero__media">
+              <figure class="media-wrap">
+                <img src="./static/img/Card.svg" alt="Card" class="media__card">
+                <img src="./static/img/card-underline.svg" alt="transections" class="card-underline">
+                <div class="card-list">
+                  <div class="card-item"><img src="./static/img/card-icon-1.svg" alt="" class="item-img">
+                    <div class="item-wrap">
+                      <span class="item-wrap-1">
+                        <p>Received Money</p>
+                        <p>+$1,600</p>
+                      </span>
+                      
+                      <span class="item-wrap-2">
+                        <p>email@gmail.com</p>
+                        <p>Sep 23</p>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="card-item"><img src="./static/img/card-icon-2.svg" alt="" class="item-img">
+                    <span class="item-wrap">
+                      <span class="item-wrap-1">
+                        <p>Send Money</p>
+                        <p>- $600</p>
+                      </span>
+                      <span class="item-wrap-2">
+                        <p>Airbnb Payment</p>
+                        <p>Sep 23</p>
+                      </span>
+                    </span>
+                  </div>
+                  <div class="card-item"><img src="./static/img/card-icon-3.svg" alt="" class="item-img">
+                    <span class="item-wrap">
+                      <span class="item-wrap-1">
+                        <p>Received Money</p>
+                        <p>+$1,600</p>
+                      </span>
+                      <span class="item-wrap-2">
+                        <p>Upwork Earning</p>
+                        <p>Sep 23</p>
+                      </span>
+                    </span>
+                  </div>
+                  <div class="card-item"><img src="./static/img/card-icon-4.svg" alt="" class="item-img">
+                    <span class="item-wrap">
+                      <span class="item-wrap-1">
+                        <p>Pay Bill</p>
+                        <p>+$1000</p>
+                      </span>
+                      <span class="item-wrap-2">
+                        <p>Electricity Bill</p>
+                        <p>Sep 23</p>
+                      </span>
+                    </span>
+                  </div>
+                </div>
+              </figure>
+              <img src="./static/img/img-child-1.svg" alt="" class="media-img-child-1">
+              <img src="./static/img/img-child-2.svg" alt="" class="media-img-child-2">
+              <img src="./static/img/img-child-3.svg" alt="" class="media-img-child-3">
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
