--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                 <img
                                     src="./static/img/about-card-child-3.svg"
                                     alt=""
-                                    class="about__img-1 about__img-1-edit"
+                                    class="about__img-1 about2__img-1-edit"
                                 />
                                 <img
                                     src="./static/img/about-card-child-4.svg "
