--- a/index.html
+++ b/index.html
@@ -405,6 +405,363 @@
                     </div>
                 </div>
             </section>
+            <!-- about-3 -->
+            <section class="feedback">
+                <div class="container">
+                    <h3
+                        class="title feedback__title"
+                        content-before="Our Testimonial"
+                    >
+                        What Clients Says
+                    </h3>
+                    <p class="desc feedback__desc">
+                        Read what clients says about us and about our online
+                        banking services that may inspire you
+                    </p>
+                    <div class="feedback-wrap">
+                        <div class="feedback__list">
+                            <div class="feedback-item">
+                                <div class="feedback__item-wrap">
+                                    <p class="feedback-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+
+                                    <div class="feedback-thumbnail">
+                                        <img
+                                            src="./static/img/feedback-avatar.svg"
+                                            alt=""
+                                            class="feedback__avatar"
+                                        />
+                                        <span class="avatar__name"
+                                            >Alastair Cook</span
+                                        >
+                                        <span class="avatar__introduc"
+                                            >Businessmen</span
+                                        >
+                                    </div>
+                                </div>
+                                <div class="feedback__item-wrap">
+                                    <p class="feedback-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+
+                                    <div class="feedback-thumbnail">
+                                        <img
+                                            src="./static/img/feedback-avatar.svg"
+                                            alt=""
+                                            class="feedback__avatar"
+                                        />
+                                        <span class="avatar__name"
+                                            >Alastair Cook</span
+                                        >
+                                        <span class="avatar__introduc"
+                                            >Businessmen</span
+                                        >
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="feedback-item">
+                                <div class="feedback__item-wrap">
+                                    <p class="feedback-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+
+                                    <div class="feedback-thumbnail">
+                                        <img
+                                            src="./static/img/feedback-avatar.svg"
+                                            alt=""
+                                            class="feedback__avatar"
+                                        />
+                                        <span class="avatar__name"
+                                            >Alastair Cook</span
+                                        >
+                                        <span class="avatar__introduc"
+                                            >Businessmen</span
+                                        >
+                                    </div>
+                                </div>
+                                <div class="feedback__item-wrap">
+                                    <p class="feedback-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+
+                                    <div class="feedback-thumbnail">
+                                        <img
+                                            src="./static/img/feedback-avatar.svg"
+                                            alt=""
+                                            class="feedback__avatar"
+                                        />
+                                        <span class="avatar__name"
+                                            >Alastair Cook</span
+                                        >
+                                        <span class="avatar__introduc"
+                                            >Businessmen</span
+                                        >
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="feedback-item">
+                                <div class="feedback__item-wrap">
+                                    <p class="feedback-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+
+                                    <div class="feedback-thumbnail">
+                                        <img
+                                            src="./static/img/feedback-avatar.svg"
+                                            alt=""
+                                            class="feedback__avatar"
+                                        />
+                                        <span class="avatar__name"
+                                            >Alastair Cook</span
+                                        >
+                                        <span class="avatar__introduc"
+                                            >Businessmen</span
+                                        >
+                                    </div>
+                                </div>
+                                <div class="feedback__item-wrap">
+                                    <p class="feedback-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+
+                                    <div class="feedback-thumbnail">
+                                        <img
+                                            src="./static/img/feedback-avatar.svg"
+                                            alt=""
+                                            class="feedback__avatar"
+                                        />
+                                        <span class="avatar__name"
+                                            >Alastair Cook</span
+                                        >
+                                        <span class="avatar__introduc"
+                                            >Businessmen</span
+                                        >
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="feedback__dots">
+                            <span class="dot active"></span
+                            ><span class="dot"></span><span class="dot"></span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- blog -->
+            <section class="blog">
+                <div class="container">
+                    <div class="blog__content">
+                        <div class="blog-wrap">
+                            <p class="title__child">Our Blog</p>
+                            <h2 class="title blog__title">Get The Updates</h2>
+                            <p class="desc blog__desc">
+                                Read our blog for the regular updates about us
+                                and about our online banking services that may
+                                inspire you
+                            </p>
+                        </div>
+                        <button class="btn blog-btn">Read All</button>
+                    </div>
+                    <div class="blog__list">
+                        <article class="blog__card">
+                            <img
+                                src="./static/img/blog-1.svg"
+                                alt=""
+                                class="blog__img"
+                            />
+                            <div class="card-wrap">
+                                <p class="desc card__date">July 03, 2022</p>
+                                <span class="title blog__card-title"
+                                    >Online bank is the best and secure way to
+                                    save in the future...</span
+                                >
+                                <a href="" class="read__blog">Read Blog</a>
+                            </div>
+                        </article>
+                        <article class="blog__card">
+                            <img
+                                src="./static/img/blog-2.svg"
+                                alt=""
+                                class="blog__img"
+                            />
+                            <div class="card-wrap">
+                                <p class="desc card__date">July 03, 2022</p>
+                                <span class="title blog__card-title"
+                                    >Why do you need to open a bank account in
+                                    online</span
+                                ><a href="" class="read__blog">Read Blog</a>
+                            </div>
+                        </article>
+                        <article class="blog__card">
+                            <img
+                                src="./static/img/blog-3.svg"
+                                alt=""
+                                class="blog__img"
+                            />
+                            <div class="card-wrap">
+                                <p class="desc card__date">July 03, 2022</p>
+                                <span class="title blog__card-title"
+                                    >The benefits that we get from credit card
+                                    at anytime...</span
+                                ><a href="" class="read__blog">Read Blog</a>
+                            </div>
+                        </article>
+                        <article class="blog__card">
+                            <img
+                                src="./static/img/blog-4.svg"
+                                alt=""
+                                class="blog__img"
+                            />
+                            <div class="card-wrap">
+                                <p class="desc card__date">July 03, 2022</p>
+                                <span class="title blog__card-title"
+                                    >How to manage your money in online in this
+                                    busy days How to manage your money in online
+                                    in this busy days</span
+                                ><a href="" class="read__blog">Read Blog</a>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <!-- application -->
+            <section class="application">
+                <div class="container app-container">
+                    <div class="application-inner">
+                        <p class="title__child application__text-child">
+                            Our App
+                        </p>
+                        <h3 class="desc application__title">
+                            Download the Apps
+                        </h3>
+                        <p class="desc application__desc">
+                            Download our mobile apps and get started today with
+                            a special online bank and move faster
+                        </p>
+                        <div class="application-wrap">
+                            <a href="#!" class="btn application-btn"
+                                ><img
+                                    src="./static/img/app-1.svg"
+                                    alt=""
+                                    class="app__redirect"
+                            /></a>
+                            <a href="#!" class="btn application-btn"
+                                ><img
+                                    src="./static/img/app-2.svg"
+                                    alt=""
+                                    class="app__redirect"
+                            /></a>
+                        </div>
+                    </div>
+                    <img
+                        src="./static/img/app-star.svg"
+                        alt=""
+                        class="app-star-1"
+                    /><img
+                        src="./static/img/app-star.svg"
+                        alt=""
+                        class="app-star-2"
+                    /><img
+                        src="./static/img/app-star.svg"
+                        alt=""
+                        class="app-star-3"
+                    /><img
+                        src="./static/img/app-star.svg"
+                        alt=""
+                        class="app-star-4"
+                    />
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="container">
+                <section class="footer__list">
+                    <div class="footer-item">
+                        <img
+                            src="./static/img/Logo.svg"
+                            alt=""
+                            class="footer__img"
+                        />
+                    </div>
+                    <div class="footer-item">
+                        <a href="#!" class="footer__link">Sitemap</a
+                        ><a href="#!" class="footer__link">Home</a
+                        ><a href="#!" class="footer__link">Abouts</a
+                        ><a href="#!" class="footer__link">Grower</a
+                        ><a href="#!" class="footer__link">Merchants</a>
+                        <a href="#!" class="footer__link">Contact</a>
+                    </div>
+                    <div class="footer-item">
+                        <a href="#!" class="footer__link">Socials</a
+                        ><a href="#!" class="footer__link">Facebook</a
+                        ><a href="#!" class="footer__link">Linkedin</a
+                        ><a href="#!" class="footer__link">Instagram</a>
+                        <a href="#!" class="footer__link">Twitter</a>
+                    </div>
+                    <div class="footer-item">
+                        <a href="#!" class="footer__link">Head Office</a>
+                        <p class="desc footer__desc">
+                            Xilliams Corner Wine © 2017. 1112 A Market St # Ste
+                            B22, Charlottesville, CA 45565
+                        </p>
+                        <form action="" class="footer-wrap">
+                            <label for="fo-email" class="footer-label"
+                                >News letter</label
+                            >
+                            <div class="footer-block">
+                                <input
+                                    type="email"
+                                    name="email"
+                                    id="fo-email"
+                                    class="footer-email"
+                                    placeholder="Email address..."
+                                />
+                                <button type="submit" class="btn footer-submit">
+                                    Subscribe
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </section>
+                <div class="email__under">
+                    <a href="#!" class="link__under">email@gmail.com</a
+                    ><a href="#!" class="link__under">(123) 456-7890</a>
+                </div>
+            </div>
+            <div class="copyright">
+                <a href="#!">© 2020 Ligft Media All rights reserved.</a>
+            </div>
+        </footer>
     </body>
 </html>
